# Galileo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  cmake_linux.yml  cmake_windows.yml
benchmark/: CMakeLists.txt  benchmark.cpp
examples/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt
src/galileo/: binary.cpp  binary.hpp  common.hpp  galileo.cpp  galileo.def  galileo.h  math.cpp  math.hpp  unary.cpp  unary.hpp
test/: CMakeLists.txt  tests.cpp
